开始动画 欢迎引导界面

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name="com.imcore.xbionic.ui.OpenActivity"
+            android:name="com.imcore.xbionic.ui.ImageActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +28,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.imcore.xbionic.ui.OpenActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.imcore.xbionic.ui.LoadActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name="com.imcore.xbionic.ui.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
+
+        
     </application>
 
 </manifest>
