--- a/project.properties
+++ b/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-18
 target=android-18
-android.library.reference.1=../Volley
+android.library.reference.1=..\\Volley
